syntax = "proto3";

package hr.fer.rassus.lab.prvi.sensor;

service SensorReadingService {
  rpc fetchSensorReading(Empty) returns (SensorReading) {}
}

message Empty {}

message SensorReading {
  double temperature = 1;
  double pressure = 2;
  double humidity = 3;
  double co = 4;
  double no2 = 5;
  double so2 = 6;
}